@@ -11,35 +11,58 @@ import org.scalatest.{BeforeAndAfterAll, Suite}
 trait SparkSessionTestWrapper extends BeforeAndAfterAll { this: Suite =>
 
   @transient protected lazy val spark: SparkSession = {
-    // Using println for simple debug output visible in sbt test logs if initialization occurs.
-    // Consider a proper logger if more advanced logging is needed here.
     System.out.println("Attempting to initialize SparkSession for test suite...")
-    val session = SparkSession.builder()
+    
+    // Set system properties for Spark to work with newer JDK
+    System.setProperty("java.security.manager", "allow")
+    
+    val builder = SparkSession.builder()
       .appName(s"FeatureTransformerTests-${this.getClass.getSimpleName}")
       .master("local[*]")
       .config("spark.sql.shuffle.partitions", "1")
-      .config("spark.sql.ui.enabled", "false") // Disable Spark UI for tests
+      .config("spark.ui.enabled", "false")
+      .config("spark.driver.host", "localhost")
+      .config("spark.driver.bindAddress", "127.0.0.1")
       .config("spark.sql.extensions", "io.delta.sql.DeltaSparkSessionExtension")
       .config("spark.sql.catalog.spark_catalog", "org.apache.spark.sql.delta.catalog.DeltaCatalog")
-      .getOrCreate()
+      .config("spark.sql.warehouse.dir", "target/spark-warehouse")
+      .config("spark.driver.extraJavaOptions", 
+        "-Dio.netty.tryReflectionSetAccessible=true " +
+        "--add-opens=java.base/java.lang=ALL-UNNAMED " +
+        "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED " +
+        "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED " +
+        "--add-opens=java.base/java.io=ALL-UNNAMED " +
+        "--add-opens=java.base/java.net=ALL-UNNAMED " +
+        "--add-opens=java.base/java.nio=ALL-UNNAMED " +
+        "--add-opens=java.base/java.util=ALL-UNNAMED " +
+        "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED " +
+        "--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED " +
+        "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED " +
+        "--add-opens=java.base/sun.nio.cs=ALL-UNNAMED " +
+        "--add-opens=java.base/sun.security.action=ALL-UNNAMED " +
+        "--add-opens=java.base/sun.util.calendar=ALL-UNNAMED"
+      )
+
+    val session = builder.getOrCreate()
+    
+    // Set log level to WARN to reduce test output
+    session.sparkContext.setLogLevel("WARN")
+    
     System.out.println(s"SparkSession initialized: ${session.version}, master: ${session.sparkContext.master}")
     session
   }
 
+  override def beforeAll(): Unit = {
+    super.beforeAll()
+    // Force initialization of the SparkSession before tests run
+    spark
+  }
+
   override def afterAll(): Unit = {
     try {
-      // Access spark val to ensure it's stopped if it was initialized.
-      // If it was never accessed (e.g. no tests run or suite aborted early), it might not be initialized.
-      // A direct check on a private var or a different flag might be more robust if needed.
-      // For now, this relies on spark being accessed if any test runs.
       if (SparkSession.getActiveSession.isDefined || SparkSession.getDefaultSession.isDefined) {
-         // Referring to 'spark' lazy val here will initialize it if not already, then stop.
-         // This is to ensure cleanup even if tests didn't explicitly use the 'spark' val.
-         // However, if it was never used, stopping a newly created one is wasteful.
-         // A better approach might be to track initialization status.
-         // For simplicity, let's assume if afterAll is called, spark might have been used.
         System.out.println(s"Attempting to stop SparkSession for test suite ${this.getClass.getSimpleName}...")
-        spark.stop() // Stop the lazy val session
+        spark.stop()
         System.out.println("SparkSession stopped.")
       }
     } finally {
